- [#651] Improve feature: Layout orientation according to grainline.
- New command line option --landscapeOrientation.
- Added ability to search measurements by regex.
- [#927] Freeze prefix language on pattern/project creation.
- [#929] New variable type: Separator.
- Speed optimization for switching "In layout" state.
- [#932] 2nd version V passmarks.

# Version 0.6.2 (unreleased)
- [#903] Bug in tool Cut Spline path.
- [#905] Valentina crashes with error: This id is not unique.
- [#909] Valentina produces wrong united path.
- [#912] Labels in inactive state return to initial color.
- [#913] Unable to save changes for piece path if it doesn't contain a point.
- [#914] Filtering custom seam allowance paths prevent including more than one.
- [#915] Valentina produces wrong seam allowance for acute angle.
- [#923] Valentina produces wrong seam allowance for rollback case.
- [#924] Valentina produces wrong passmark for rollback case.
- [#930] Valentina doesn't update translation for variables after dynamic language switch.
- [#931] Variable translation for Greek and Chinese are broken.
- [#938] Dialog Seam Allowance doesn't block user from saving broken formula.
- [#939] Calling Formula Wizard through property explorer doesn't refresh formula.
- [#937] Wrong symmetrical seam corners on pieces.
- [#942] Save Layout mode ignores paper format for tiled PDF.

# Version 0.6.1 October 23, 2018
- [#885] Regression. Broken support for multi size measurements.
- Fixed issues with seam allowance.
- [#890] Menu Windows->Close pattern doesn't clear "Group of visibility" list.
- [#891] Valentina claims that file was incorrectly saved when used Save as option.

# Version 0.6.0 October 1, 2018
- [#682] New feature. Export increments to Excel .csv.
- [#681] Enhance feature: Dashed line options for curves, arcs, etc.
- [#684] Proposal: Add option to only show outer edges on detail.
- [#244] New feature: Adjust line and point thickness and label size.