@@ -138,28 +138,31 @@ The path to output destination folder. By default the directory at which the app
 .BR "*" " Legal = 6,"
 .RE
 .RS
-.BR "*" " Roll 24in = 7,"
+.BR "*" " Tabloid = 7,"
 .RE
 .RS
-.BR "*" " Roll 30in = 8,"
+.BR "*" " Roll 24in = 8,"
 .RE
 .RS
-.BR "*" " Roll 36in = 9,"
+.BR "*" " Roll 30in = 9,"
 .RE
 .RS
-.BR "*" " Roll 42in = 10,"
+.BR "*" " Roll 36in = 10,"
 .RE
 .RS
-.BR "*" " Roll 44in = 11,"
+.BR "*" " Roll 42in = 11,"
 .RE
 .RS
-.BR "*" " Roll 48in = 12,"
+.BR "*" " Roll 44in = 12,"
 .RE
 .RS
-.BR "*" " Roll 62in = 13,"
+.BR "*" " Roll 48in = 13,"
 .RE
 .RS
-.BR "*" " Roll 72in = 14."
+.BR "*" " Roll 62in = 14,"
+.RE
+.RS
+.BR "*" " Roll 72in = 15."
 .RE
 .IP "--landscapeOrientation"
 .RB "Switch page template orientation to landscape (" "export mode" "). This option has effect only for one of predefined page templates."
@@ -589,7 +592,10 @@ The path to output destination folder. By default the directory at which the app
 .BR "*" " Letter = 5,"
 .RE
 .RS
-.BR "*" " Legal = 6."
+.BR "*" " Legal = 6,"
+.RE
+.RS
+.BR "*" " Tabloid = 7."
 .RE
 .IP "--tiledlmargin <The left margin>"               
 .RB "Tiled page left margin in current units like 3.0 (" "export mode" "). If not set will be used default value 1 cm."
