@@ -10,6 +10,7 @@
 - [#929] New variable type: Separator.
 - Speed optimization for switching "In layout" state.
 - [#932] 2nd version V passmarks.
+- [#936] Improve list of predefined paper size formats for layout export. Added format Tabloid.
 
 # Version 0.6.2 (unreleased)
 - [#903] Bug in tool Cut Spline path.
